Support for optional sensor range attributes, import/export,
git-svn-id: http://subversion.assembla.com/svn/Debrief@2157 cb33b658-6c9e-41a7-9690-cba343611204